# duckdb-geotiff

./: CMakeLists.txt  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  build.yml  build_package.yml  package.yml
src/: geotiff.cpp  geotiff_extension.cpp
src/include/: geotiff_extension.hpp  geotiff_register.hpp
test/sql/: geotiff.test
